Banners main methods have been added
